<resources>
    <string name="app_name">TuristeAR</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDwmi98HD3mliJH3jKrxxC3sfU5sOrHEQg</string>
    <string name="pass_hint">Contraseña</string>
    <string name="name_hint">Nombre</string>
    <string name="email_hint">email</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="create_button_text">Registrarse</string>
    <string name="create_new_acc_button_text">Crear Cuenta</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open_drawer">Abrir Menú</string>
    <string name="close_drawer">Cerrar Menú</string>

    <string name="marker_title">MarkerTitle</string>
    <string name="marker_description">MarkerDescription</string>
    <string name="marker_image">MarkerImage</string>
    <string name="marker_location_key">MarkerLocationKey</string>
    <string name="marker_secret_amount">MarkerSecretAmount</string>
    <string name="marker_location_rating">MarkerRating</string>
    <string name="user_id">User ID</string>
    <string name="review_dialog_prompt">¿Qué opinas sobre este sitio?</string>
    <string name="image_src_personal">Personal</string>
    <string name="proximo_nivel_en">Proximo nivel en: %1$d pts</string>
    <string name="puntos_usuario">Puntos: %1$d</string>
    <string name="proximo_nivel_display_loading">Proximo nivel en: 100 pts</string>
</resources>
